tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/serverfirst/tcp-server:ISTIO_MUTUAL/PERMISSIVE/_test_context/PeerAuthentication-DestinationRule.924391042.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: c
  namespace: echo-2-60257
spec:
  host: c
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: c
  namespace: echo-2-60257
spec:
  mtls:
    mode: PERMISSIVE
  selector:
    matchLabels:
      app: c
